@@ -13,8 +13,10 @@ namespace Stetic.Editor
 		protected override void CreateIcons ()
 		{
 			foreach (string s in StockIconHelper.StockIcons) {
-				if (s != "-" && s != "|")
-					AddIcon (s, RenderIcon (s, Gtk.IconSize.Menu, ""), s);
+				if (s != "-" && s != "|") {
+					Gdk.Pixbuf pix = RenderIcon (s, Gtk.IconSize.Menu, "");
+					if (pix != null) AddIcon (s, pix, s);
+				}
 				else
 					AddSeparator (s);
 			}
